# mega

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build.sh  pyproject.toml  requirements_dev.txt  setup.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: mega_test.yml
mega/: __init__.py
mega/op/: arithmethic.pyx  function.pyx  gamma.pyx  tensor.pyx
mega/utils/: constant.pxd  constant.pyx
test/: arithmetic_test.py  constant_test.py  function_test.py  gamma.py  main_test.py  tensor_test.py
