[build-system]
requires = ["setuptools", "wheel", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "mega"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cython>=3.1.0",
    "numpy>=2.2.6",
    "setuptools>=80.7.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "matplotlib>=3.10.3",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]
